# sasta

./: .editorconfig  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  package.json  production.py  sitemap.xml  update-version.sh
accounts/: index.html
backend/: conftest.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
backend/analysis/: models.py  models_tests.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/analysis/convert/: chat_converter.py
backend/analysis/convert/tests/: convert_test.py
backend/analysis/management/commands/: cleanup_old_transcripts.py
backend/analysis/migrations/: 0034_remove_assessmentquery_variants.py  0035_assessmentquery_variants.py  0036_async_annotations.py  0036_auto_20251029_1000.py  0036_auto_20260326_1405.py  0036_auto_20260327_1237.py  0037_additional_files.py  0037_auto_20251029_1511.py
backend/analysis/query/: query_transcript.py  run.py
backend/annotations/: writer_tests.py
backend/annotations/writers/: saf_chat.py
backend/authentication/: urls.py  views.py
backend/authentication/tests/: register_tests.py  reset_tests.py
backend/convert/: chat_reader.py
backend/parse/: parse_utils.py  views.py
backend/parse/tests/: parse_tests.py
backend/results/: conftest.py  serializers.py
backend/results/tests/: serializer_tests.py
backend/results/tests/data/tarsp_example/: corrected_parse.xml  input.cha  input.docx  input.txt  parse.xml
backend/sasta/: common_settings.py  settings.py  urls.py
backend/tests/: integration_tests.py
(+83 files in other folders)
