[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sasta-backend"
version = "0.11.0"
requires-python = ">3.10"
dependencies = [
    "corpus2alpino",
    "celery",
    "chamd",
    "django<6",
    "django_celery_results",
    "djangorestframework",
    "dj-rest-auth[with-social]",
    "django-revproxy",
    "lxml",
    "natsort",
    "numpy",
    "pandas",
    "psycopg2",
    "python-docx",
    "openpyxl",
    "xlsxwriter",
    "sastadev",
    "sentry-sdk[django]",
]

[project.optional-dependencies]
dev = [
    "django-livereload-server",
    "pytest",
    "pytest-django",
    "ruff",
    "pip-audit"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sasta.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py", "*_test.py"]
log_level = "WARNING"
# Ignore sastadev tests
addopts = "--ignore backend/sastadev -p no:warnings"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [
    "sastadev",
    ".env",
    ".env13",
    "glue.py",
    "bootstrap.py",
    "collect.py"
]

[tool.ruff.lint]
select = ["E", "F", "C90"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["F401", "F811"]
"*_tests.py" = ["F401", "F811"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
